# infinite_interaction

./: .gitignore  CMakeLists.txt  README.md  README.org  package.xml
SLS-scripts/: Dec10_figures_compare.py  Jan09_Q_synthesis.py  Jan09_controllers_analysis.py  Jan09_force_synthesis.py  Jan09_model_derivation.py  Jan09_plant_pool.py  Jan09_print_controllers.py  Jan25_admittance_controller_printer.py  Jan25_teaching_analysis.py  Nov14_investigateSLS.ipynb  Nov14_synthesis2.ipynb  Nov14_synthesis2.py  Nov16_fundamental_limit.ipynb  Nov18_passive.py  Nov18_passive_Qparam.py  Nov21_Cart_synthesis_Qparam.py  Oct01_modelling_J3_cmd.py  Oct01_modelling_J3_tau.py  Oct02_SISO_design.m  Oct02_SISO_model.m  Oct02_modelling_J3_total.py  Oct05_SISO_design.m  Oct05_SISO_testnoise.m  Oct05_filters_test.m  Oct23_1dof_admittance.py  Oct24_testlft.m  Oct24_testlft.py  Oct26_2dof_investigation.m  SLSsyn.py  Sep14_SISO_design.m  Sep15_SISO_analysis.m  Sep15_data_analysis.py  Sep20_SISO_loopgain_analysis.m  Sep20_SISO_newmodel.m  Sep20_SISO_test.m  Sep21_SISO_analysis.m  Sep26_SISO_design.m  Sep26_SISO_model.m  Sep26_SISO_test3.m
SLS-scripts/tests/: conftest.py  pytest.ini  test_freq_response_variable.py  test_time_response_variable.py
config/: Nov21_Cart_synthesis_Qparam_synres.yaml  admittance_params.yaml  experiment_params.yaml  fir_mimo_controllers.yaml  gazebo_controllers.yaml  gazebo_controllers_joint.yaml  hybrid_force_control.yaml  rosconsole.conf  super.yaml
config/identification_experiment/: data_board_configurations.yaml  main_configurations.yaml  send_sinuisoidal_motions.py
config/sliding_experiment/: Q_syn0_0.yaml  Q_syn1_0.yaml  data_board_configurations.yaml  hybrid_force_controller_configurations.yaml  integral0_0.yaml  integral1_0.yaml  integral2_0.yaml  integral3_0.yaml  standard_profiles.yaml
config/teaching_experiment/: Q_syn0_0.yaml  Q_syn_admittance_v0.yaml  Q_syn_admittance_v1.yaml  Q_syn_admittance_v2.yaml  Q_syn_admittance_v3_Xaxis.yaml  admittance_v0.yaml  admittance_v1.yaml  data_board_configurations.yaml  main_configurations.yaml
data/urdf/: common.gazebo.xacro  denso_ft_gripper.xacro  denso_handle.urdf.xacro  denso_robotiq_85_gripper.urdf.xacro  denso_vs060.urdf  denso_vs060_handle.xacro  denso_vs060_robot.urdf.xacro  denso_vs060_v2.gazebo  denso_vs060_v2.xacro  resolve_package_path_urdf.py
data/vrep_scene/: test_kuka.ttt
data/worlds/: robotic_setup.world
include/: infinite_interaction_lib.h
include/infinite_interaction/: infinite_interaction_lib.h  utils.h
launch/: 2019_Jan_identification_experiment.launch  2019_Jan_sliding_experiment.launch  2019_jan_teaching_experiment.launch  admittance_controller.launch  gazebo_interface.launch  gazebo_ros_controllers.launch  hybrid_force_controller.launch  load_netft.launch  view_urdf.launch
scripts/: analyze_data.py  data_board.py  gen_FIRsrfb_admittance_ctrl.py  hybrid_force_identificator.py  plot_figures_inf_interaction.py  sliding_experiment_command_center.py  vrep_simulation_1.sh
src/: admittance_controller.cpp  force_controller.cpp  infinite_interaction.cpp  sinuisoidal_motion_generator.cpp
src/libinfinite_interaction/: filters.cpp  infinite_interaction.cpp  rt_utils.cpp
src/tests/: test_cart_position_tracker.cpp  test_discrete_time_filter.cpp  test_fir_controller.cpp  test_topic_debugger.cpp
