<?xml version="1.0"?>
<package>
  <name>infinite_interaction</name>
  <version>0.0.0</version>
  <description>The infinite_interaction package</description>

  <maintainer email="hungpham2511@gmail.come">Hung Pham</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>denso_control</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>robotiq_description</run_depend>
  <run_depend>denso_control</run_depend>
  <run_depend>denso_description</run_depend>
  <run_depend>denso_gazebo</run_depend>
  <run_depend>openrave_catkin</run_depend>

  <export>

  </export>
</package>
